--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,17 @@
         <section class="contact-sec">
             <form action="#">
                 <fieldset>
-                    <legend><strong>Contact Me</strong></legend>
-                    <label for="fname">First name</label>
-                    <input type="text" id="fname">
-                    <label for="lname">Last name</label>
-                    <input type="text" id="lname">
+                    <legend><strong>Contact Me</strong></legend><br>
+                    <label for="fname">First Name</label>
+                    <input type="text" id="fname" placeholder="Your first name"><br><br>
+                    <label for="lname">Last Name</label>
+                    <input type="text" id="lname" placeholder="Your last name"><br><br>
                     <label for="email">Email</label>
-                    <input type="email" name="email" id="email">
+                    <input type="email" name="email" id="email" placeholder="Your email"><br><br>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" placeholder="Your phone number"><br><br>
                     <label for="birthday">Birthday</label>
-                    <input type="date" id="birthday">
+                    <input type="date" id="birthday"><br><br>
                 </fieldset>
             </form>
         </section>
